--- a/その他/app.html
+++ b/その他/app.html
@@ -13,18 +13,19 @@
         <input id="TAB-03" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-03">HJPA</label>
         
         <input id="TAB-04" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-04">学科紹介</label>
-        <div class="tab-content">
-          <ul>
-            <li>人文社会大学（인문사회대학）</li>
-            <li>グローバルビジネス大学（글로벌비즈니스대학）</li>
-            <li>神学大学（신학대학）</li>
-            <li>健康保険大学（건강보건대학）</li>
-            <li>工科大学（공과대학）</li>
-            <li>SW融合大学（SW융합대학）</li>
-          </ul>
-        </div>
+              
         <input id="TAB-05" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-05">トンアリ</label>
         <!-- <div class="tab-content"></div> -->
       </div>
+      <div class="subject">
+        <button class="btn btn--humanity btn--circle" for = "TAB-04">人文社会大学 <br>（인문사회대학）</button>
+        <!--
+        <button class="btn btn--global btn--circle" for = "TAB-04">グローバルビジネス大学<br>(글로벌비즈니스대학)</button>
+        <button class="btn btn--theology btn--circle" for = "TAB-04">神学大学<br>（신학대학）</button>
+        <button class="btn btn--health btn--circle" for = "TAB-04">健康保険大学<br>（건강보건대학）</button>
+        <button class="btn btn--engineer btn--circle" for = "TAB-04">工科大学<br>（공과대학）</button>
+        <button class="btn btn--sw btn--circle" for = "TAB-04">SW融合大学<br>（SW융합대학）</button>   
+        -->
+      </div>  
     </body>
 </html>
