--- a/Home/tonari/tonari.html
+++ b/Home/tonari/tonari.html
@@ -2,86 +2,134 @@
 <html lang="ja">
     <head>
         <meta charset = "utf-8">
-        <title>Grant Your Wish</title>
+        <title>トンアリ</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel = "stylesheet" href = "tonari.css"> 
     </head>
-    <body>
-        <section id="vertical_tab_nav">
-            <ul>
-                <li><a href="index.html">Tab One</a></li>
-                <li class="selected"><a href="index.html">Tab Two</a></li>
-                <li><a href="index.html">Tab Three</a></li>
-                <li><a href="index.html">Tab Four</a></li>
-            </ul>
-            
-            <div>
-                <article>
-                    <h2>Tab Content One</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <body>     
+        <div class="tonari-container">
+            <!--
+            <a class="et-hero-tab" href="#tab-home">home</a>
+            <a class="et-hero-tab" href="#tab-japan">日本人留学生会</a>
+            <a class="et-hero-tab" href="#tab-hjpa">HJPA</a>
+            <a class="et-hero-tab" href="#tab-school">学科紹介</a>
+            <a class="et-hero-tab" href="#tab-tonari">トンアリ</a>
+            -->
+            <a class="tonari-tab" href="../home.html">home</a>
+            <a class="tonari-tab" href="../japan/japan.html">日本人留学生会</a>
+            <a class="tonari-tab" href="../hjpa/hjpa.html">HJPA</a>
+            <a class="tonari-tab" href="../school_subject/school_subject.html">学科紹介</a>
+            <a class="tonari-tab" href="#tab-home">トンアリ</a>
+        </div>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </article>
-
-                <article>
-                    <h2>Tab Content Two</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </article>
-
-                <article>
-                    <h2>Tab Content Three</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </article>
-
-                <article>
-                    <h2>Tab Content Four</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </article>
-            </div>
-        </section>
+        <div class="page-wrap wrapper tog">
+            <nav id="sidebar" class="leftbar-wrap">
+                <!-- sidebar-search  -->
+                <div class="leftbar-menu">
+                    <ul>
+                    <li class="header-menu">
+                        <span>tonari</span>
+                    </li>
+                    <li class="leftbar-dropdown">
+                        <a href="#">
+                            <i class="child child-tachometer-alt"></i>
+                            <span>人文社会大学(인문사회대학)</span>
+                        </a>
+                        <div class="leftbar-submenu">
+                            <ul>
+                              <li><a href="#">Dashboard 1</a></li>
+                              <li><a href="#">Dashboard 2</a></li>
+                              <li><a href="#">Dashboard 3</a></li>
+                            </ul>
+                          </div>
+                        </li>
+                        <li class="leftbar-dropdown">
+                          <a href="#">
+                            <i class="child child-business"></i>
+                            <span>グローバルビジネス大学(글로벌비즈니스대학)</span>
+                          </a>
+                          <div class="leftbar-submenu">
+                            <ul>
+                              <li><a href="#">Products</a></li>
+                              <li><a href="#">Orders</a></li>
+                              <li><a href="#">Credit cart</a></li>
+                            </ul>
+                          </div>
+                        </li>
+                        <li class="leftbar-dropdown">
+                          <a href="#">
+                            <i class="childr child-theology"></i>
+                            <span>神学大学(신학대학)</span>
+                          </a>
+                          <div class="leftbar-submenu">
+                            <ul>
+                              <li><a href="#">General</a></li>
+                              <li><a href="#">Panels</a></li>
+                            </ul>
+                          </div>
+                        </li>
+                        <li class="leftbar-dropdown">
+                          <a href="#">
+                            <i class="child child-health"></i>
+                            <span>健康保険大学(건강보건대학)</span>
+                          </a>
+                          <div class="leftbar-submenu">
+                            <ul>
+                              <li><a href="#">Pie chart</a></li>
+                            </ul>
+                          </div>
+                        </li>
+                        <li class="leftbar-dropdown">
+                          <a href="#">
+                            <i class="child child-engineer"></i>
+                            <span>工科大学(공과대학)</span>
+                          </a>
+                          <div class="leftbar-submenu">
+                            <ul>
+                              <li><a href="#">Google maps</a></li>
+                            </ul>
+                          </div>
+                        </li>
+                        <li class="leftbar-dropdown">
+                            <a href="#">
+                              <i class="child child-sw"></i>
+                              <span>SW融合大学(SW융합대학)</span>
+                            </a>
+                            <div class="leftbar-submenu">
+                              <ul>
+                                <li><a href="#">Google maps</a></li>
+                              </ul>
+                            </div>
+                          </li>
+                      </ul>
+                    </div>
+                    <!-- leftbar-menu  -->
+                </div>
+            </nav>
+        </div>
+        <!-- Main -->
+        <main class="main">
+            <section class="tonari-slide" id="tab-home">
+                <h1>トンアリ活動</h1>
+                <h3>~　~</h3>
+            </section>
+            <section class="tonari-slide" id="tab-japan">
+                <h1>日本人留学生会</h1>
+                <h3>700人</h3>
+            </section>
+            <section class="tonari-slide" id="tab-hjpa">
+                <h1>HJPA</h1>
+                <h3>園母奨学金</h3>
+            </section>
+            <section class="tonari-slide" id="tab-school">
+                <h1>~ 学科紹介 ~</h1>
+            </section>
+            <section class="tonari-slide" id="tab-tonari">
+                <h1>~ トンアリ ~</h1>
+            </section>
+        </main> 
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+        <script src="tonari.js"></script>
     </body>
 </html>
