--- a/Home/tonari/tonari.html
+++ b/Home/tonari/tonari.html
@@ -13,7 +13,7 @@
             <a class="et-hero-tab" href="#tab-home">home</a>
             <a class="et-hero-tab" href="#tab-japan">日本人留学生会</a>
             <a class="et-hero-tab" href="#tab-hjpa">HJPA</a>
-            <a class="et-hero-tab" href="#tab-school">学科紹介</a>
+            <a class="et-hero-tab" href="#tab-tonari">学科紹介</a>
             <a class="et-hero-tab" href="#tab-tonari">トンアリ</a>
             -->
             <a class="tonari-tab" href="../home.html">home</a>
@@ -28,106 +28,230 @@
                 <!-- sidebar-search  -->
                 <div class="leftbar-menu">
                     <ul>
-                    <li class="header-menu">
-                        <span>tonari</span>
-                    </li>
-                    <li class="leftbar-dropdown">
-                        <a href="#">
-                            <i class="child child-tachometer-alt"></i>
-                            <span>人文社会大学(인문사회대학)</span>
+                      <li class="header-menu" href = "tab-home">
+                          <span>トンアリ紹介</span>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="javascript:void(0)">           <!-- href = "#"：画面先頭に移動-->
+                              <i class="child child-japan"></i>
+                              <span>・日本人留学生会</span>
+                          </a>
+                          <div class="leftbar-submenu">
+                            <ul>
+                              <li><a href="#japan1">ルミエル</a></li>
+                              <li><a href="#japan2">アルファ芸術協会</a></li>
+                              <li><a href="#japan3">Re:creation</a></li>
+                              <li><a href="#japan4">天父報恩鼓</a></li>
+                              <li><a href="#japan5">統一武道</a></li>
+                              <li><a href="#japan6">孝ショック</a></li>
+                            </ul>
+                        </div>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="#example1">
+                              <i class="child child-sw"></i>
+                              <span>・PBS</span>
+                          </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="#example2">
+                              <i class="child child-sw"></i>
+                              <span>・就活トンアリ</span>
+                          </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="#example3">
+                              <i class="child child-sw"></i>
+                              <span>・Project공부</span>
+                          </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="#example4">
+                              <i class="child child-sw"></i>
+                              <span>・ソルーナ</span>
+                          </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="#example5">
+                              <i class="child child-sw"></i>
+                              <span>・韓国籍留学生の会</span>
+                          </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                          <a href="#example6">
+                              <i class="child child-sw"></i>
+                              <span>・日韓平和合唱project</span>
+                          </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                        <a href="#example7">
+                            <i class="child child-sw"></i>
+                            <span>・フンタリョン</span>
+                        </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                        <a href="#example8">
+                            <i class="child child-sw"></i>
+                            <span>・撮影チーム(CARP)</span>
+                        </a>
+                      </li>
+                      <li class="leftbar-dropdown">
+                        <a href="javascript:void(0)">           <!-- href = "#"：画面先頭に移動-->
+                            <i class="child child-japan"></i>
+                            <span>・活動休止中</span>
                         </a>
                         <div class="leftbar-submenu">
-                            <ul>
-                              <li><a href="#">Dashboard 1</a></li>
-                              <li><a href="#">Dashboard 2</a></li>
-                              <li><a href="#">Dashboard 3</a></li>
-                            </ul>
-                          </div>
-                        </li>
-                        <li class="leftbar-dropdown">
-                          <a href="#">
-                            <i class="child child-business"></i>
-                            <span>グローバルビジネス大学(글로벌비즈니스대학)</span>
-                          </a>
-                          <div class="leftbar-submenu">
-                            <ul>
-                              <li><a href="#">Products</a></li>
-                              <li><a href="#">Orders</a></li>
-                              <li><a href="#">Credit cart</a></li>
-                            </ul>
-                          </div>
-                        </li>
-                        <li class="leftbar-dropdown">
-                          <a href="#">
-                            <i class="childr child-theology"></i>
-                            <span>神学大学(신학대학)</span>
-                          </a>
-                          <div class="leftbar-submenu">
-                            <ul>
-                              <li><a href="#">General</a></li>
-                              <li><a href="#">Panels</a></li>
-                            </ul>
-                          </div>
-                        </li>
-                        <li class="leftbar-dropdown">
-                          <a href="#">
-                            <i class="child child-health"></i>
-                            <span>健康保険大学(건강보건대학)</span>
-                          </a>
-                          <div class="leftbar-submenu">
-                            <ul>
-                              <li><a href="#">Pie chart</a></li>
-                            </ul>
-                          </div>
-                        </li>
-                        <li class="leftbar-dropdown">
-                          <a href="#">
-                            <i class="child child-engineer"></i>
-                            <span>工科大学(공과대학)</span>
-                          </a>
-                          <div class="leftbar-submenu">
-                            <ul>
-                              <li><a href="#">Google maps</a></li>
-                            </ul>
-                          </div>
-                        </li>
-                        <li class="leftbar-dropdown">
-                            <a href="#">
-                              <i class="child child-sw"></i>
-                              <span>SW融合大学(SW융합대학)</span>
-                            </a>
-                            <div class="leftbar-submenu">
-                              <ul>
-                                <li><a href="#">Google maps</a></li>
-                              </ul>
-                            </div>
-                          </li>
-                      </ul>
-                    </div>
-                    <!-- leftbar-menu  -->
+                          <ul>
+                            <li><a href="#rest">S!NAGY</a></li>
+                            <li><a href="#rest">ヘボルム</a></li>
+                          </ul>
+                        </div> 
+                      </li>
+                    </ul>
                 </div>
             </nav>
         </div>
         <!-- Main -->
         <main class="main">
-            <section class="tonari-slide" id="tab-home">
-                <h1>トンアリ活動</h1>
-                <h3>~　~</h3>
+            <section class="tonari-slide home" id="tab-home">
+                <h1>トンアリ紹介</h1>
+                <h3>~ さーよったよった！運動から文学までより取り見取り ~</h3>
             </section>
-            <section class="tonari-slide" id="tab-japan">
-                <h1>日本人留学生会</h1>
-                <h3>700人</h3>
+            <section class="tonari-slide japan" id="japan1">
+                <h1>ルミエル</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
             </section>
-            <section class="tonari-slide" id="tab-hjpa">
-                <h1>HJPA</h1>
-                <h3>園母奨学金</h3>
+            <section class="tonari-slide japan" id="japan2">
+                <h1>アルファ芸術協会</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
             </section>
-            <section class="tonari-slide" id="tab-school">
-                <h1>~ 学科紹介 ~</h1>
+            <section class="tonari-slide japan" id="japan3">
+                <h1>【Re-creation】</h1>
+                <div class="box">
+                    <p><br>Re-creationは1997年に出来た、ダンスのトンアリです！<br>
+                        <br>2018年に孝情文化トンアリにも認定されて、主に『新入生歓迎会』『4送会』『祝祭』『定期公演』で踊ってます！<br>
+                        <br>大学をリ・クリエイト（再創造）しよう！という、目標で頑張っています。<br>
+                        <br>各ジャンル、ロック、ヒップホップ、ガールズ、K-POP、などに<br>
+                        <br>創設当時は韓国人が主なメンバーでしたが今は日本人が多くいますが、世界圏のメンバーなども所属しています！<br>
+                        <br>なんと行っても初心者から経験者までいて、最後は高いクオリティのダンスをしていくのが特徴ですね。<br>
+                        <br>鮮文大学での出し物、ダンスを担っていると言っても過言ではないです！<br>
+                        <br>とても仲が良くて、楽しみながら頑張ってます！<br>
+                        <br>本番前の毎日練習や、メンバーが一つになって踊る姿は自分も見てて壮観です。<br>
+                        <br>このトンアリは、各メンバーが成長することを意識しています、ダンスをただ楽しむのも、<br>
+                        <br>もちろん見てくれるに最高のダンスを見せようと、日々の努力を積み重ねています！<br>
+                        <br>これからは、コロナでメディアが発展しているのでリクのインスタグラムやYouTubeにも、<br>
+                        <br>今までのように定点カメラのみで撮るものではなく、時代に合わせた作品を作っていくつもりです！<br></p>
+                </div>
             </section>
-            <section class="tonari-slide" id="tab-tonari">
-                <h1>~ トンアリ ~</h1>
+            <section class="tonari-slide japan" id="japan4">
+                <h1>天父報恩鼓</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
             </section>
+            <section class="tonari-slide japan" id="japan5">
+                <h1>統一武道</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide japan" id="japan6">
+                <h1>孝ショック❗️</h1>
+                <div class="box">
+                    <p><br>孝shockは日本人留学生会直属の公的トンアリになります。<br>
+                        <br>
+                        <br>孝情にshockを与える、親子をする二世になろうをコンセプトに代々受け継がれて来ました💪💪<br>
+                        <br>
+                        <br>孝shock自体の役割としては、各機関のパイプ役となってます。<br>
+                        <br>コーディネーターを中心とし日本本部の方と繋がりを持ちながら情報の共有が<br>
+                        <br>孝shockとしての1番大きなポイントとなってます💡<br>
+                        <br><br>
+                        <br><strong>【活動内容】</strong><br>
+                        <br>その中で孝shockは大きく分けて３つの活動を行ってます。<br>
+                        <br><strong>1、FE</strong><br>
+                        <br>『真の父母様の教育理念と伝統を相続し、孝情をもつ鮮文大学生となろう』<br>
+                        <br>をスローガンに毎年一回の修練会を運営してます。<br>
+                        <br>３つの項目に分けられ、意志力体力チャレンジでは男性18キロ、女性16キロを心と体の限界を超える挑戦を行い、<br>
+                        <br>論述試験では御父母様の心情を学び、原理試験では自信の原理力をはかる場となってます。<br>
+                        <br>
+                        <br><strong>2、原理勉強会</strong><br>                        
+                        <br>真のお母様がJTGC基準を最低でも超えなさいとの一言から発足しました。<br>
+                        <br>聞くより、書くより、『教える』と言う事で週に1〜2回原理講義を行っています！<br>
+                        <br>
+                        <br><strong>3、語学院修練会</strong><br>  
+                        <br>毎年大学生が冬のパンハクに入る直前で開催されます。<br>
+                        <br>語学院の兄弟姉妹達に何かを教えると言うよりも、実体として愛して行きながら、<br>
+                        <br>語学院生が大学に来た時に先輩達と触れやすく、溶け込みやすい環境を作るために行ってます。<br>
+                        <br>
+                        <br><strong>【トンアリビジョン】</strong><br>  
+                        <br>トンアリとしての目標は、鮮文大学生全員がJTGC基準に挑戦し、取得する事です！！<br>
+                        <br>その為のFEであり、原理勉強会であり、語学院修だと思ってます。<br>
+                        <br>一人一人に神様が願われてる内容を悟る一つのきっかけになったらと思い活動してます(ヨツバノクローバー)<br></p>
+                </div>
+            </section>
+            <section class="tonari-slide japan">
+            </section>
+            <section class="tonari-slide example" id="example1">
+                <h1>PBS</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example2">
+                <h1>就活トンアリ</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example3">
+                <h1>Project공부</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example4">
+                <h1>ソルーナ</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example5">
+                <h1>韓国籍留学生の会</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example6">
+                <h1>日韓平和合唱project</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example7">
+                <h1>フンタリョン</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide example" id="example8">
+                <h1>撮影チーム(CARP)</h1>
+                <div class="box">
+                    <p><br></p>
+                </div>
+            </section>
+            <section class="tonari-slide rest" id="rest">
+                <h1>活動休止中</h1>
+                
+                <div class="box">
+                    <p><br><h3>S!NAGY<br>
+                            　ヘボルム<br></h3></p>
+                </div>
+            </section>
+            
         </main> 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
         <script src="tonari.js"></script>
